--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
 
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>my website</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>Assignment 4 WebPage</h1>
+  </header>
+
+  <nav>
+    <ul class="nav-links">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Articles</a></li>
+      <li><a href="#">Projects</a></li>
+      <li><a href="#">About</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <section class="content">
+      <h2>Content</h2>
+      <p>This is the main content area of the webpage. It stretches across the page on smaller devices, but shares space with the sidebar on larger screens.</p>
+
+      <div class="cards">
+        <div class="card">Card 1</div>
+        <div class="card">Card 2</div>
+        <div class="card">Card 3</div>
+      </div>
+    </section>
+
+    <aside class="sidebar">
+      <h3>Sidebar</h3>
+      <p>For Additional info, links, or widgets</p>
+    </aside>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 My Responsive Site</p>
+  </footer>
+</body>
+</html>
